sources = files(
	'cli.c',
	'cli_input.c',
	'cli_cmds.c',
	'cli_map.c',
	'cli_gapbuf.c',
	'cli_file.c',
	'cli_env.c',
	'cli_auto_complete.c',
	'cli_help.c',
	'cli_history.c',
	'cli_search.c',
	'cli_cmap.c',
	'cli_vt100.c',
	'cli_scrn.c',
	'cli_string_fns.c'
)
deps += dep_common
cflags += '-Wno-format-truncation'
