# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2019 Intel Corporation

version = 1
sources = files(
	'cli_auto_complete.c',
	'cli.c',
	'cli_cmap.c',
	'cli_cmds.c',
	'cli_env.c',
	'cli_file.c',
	'cli_gapbuf.c',
	'cli_help.c',
	'cli_history.c',
	'cli_input.c',
	'cli_map.c',
	'cli_scrn.c',
	'cli_search.c',
	'cli_vt100.c')
headers = files(
	'cli_auto_complete.h',
	'cli_cmap.h',
	'cli_cmds.h',
	'cli_common.h',
	'cli_env.h',
	'cli_file.h',
	'cli_gapbuf.h',
	'cli.h',
	'cli_help.h',
	'cli_history.h',
	'cli_input.h',
	'cli_map.h',
	'cli_scrn.h',
	'cli_search.h')
deps += ['ethdev', 'timer', 'pci']
