# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2019 Intel Corporation

version = 1
allow_experimental_apis = true
headers = files(
	'rte_atoip.h',
	'rte_link.h',
	'rte_portlist.h',
	'rte_strings.h',
	'rte_heap.h')

sources = files(
	'rte_atoip.c',
	'rte_link.c',
	'rte_portlist.c',
	'rte_strings.c',
	'rte_heap.c')
#deps += ['ethdev']
#deps += ['mbuf', 'dbuf']
